Boolean - BMesh - Sometimes fails when using ngons #52291

Closed
opened 2017-08-08 00:30:58 +02:00 by Carlo Andreacchio · 8 comments

System Information
Linux Ubuntu 17.04 GTX 1080

Blender Version
Broken: b94a433ca3

Short description of error
Bmesh Booleans - Option sometimes fails when root object has ngons

Exact steps for others to reproduce the error

  1. Open attached blend file
  2. notice how there is no hole in the object.
  3. change to frame 2
  4. notice how there is a hole in the object
  5. change to frame 3
  6. notice how there is a weird cut in the object
  7. Triangulate base mesh
  8. notice how frame 1 now looks correct, but frame 3 still has a bit of artefacts

bug.blend

**System Information** Linux Ubuntu 17.04 GTX 1080 **Blender Version** Broken: b94a433ca34 **Short description of error** Bmesh Booleans - Option sometimes fails when root object has ngons **Exact steps for others to reproduce the error** 1. Open attached blend file 2. notice how there is no hole in the object. 3. change to frame 2 4. notice how there is a hole in the object 5. change to frame 3 6. notice how there is a weird cut in the object 7. Triangulate base mesh 8. notice how frame 1 now looks correct, but frame 3 still has a bit of artefacts [bug.blend](https://archive.blender.org/developer/F698368/bug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Attached is the same file without the parent on the boolean, still displays the same issue:
bug.blend

Attached is the same file without the parent on the boolean, still displays the same issue: [bug.blend](https://archive.blender.org/developer/F698369/bug.blend)

Added subscribers: @ideasman42, @Sergey

Added subscribers: @ideasman42, @Sergey
Campbell Barton was assigned by Sergey Sharybin 2017-09-13 12:48:32 +02:00

@ideasman42, mind having a look here? Thanks! :)

@ideasman42, mind having a look here? Thanks! :)

This issue was referenced by 892d304ded

This issue was referenced by 892d304dedb60891d9e0b3091eceecb163644215

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Note this file has a cyclic dependency, loading the file doesn't calculate booleans because of this. (unrelated problem to actual report)

To fix:

  • Select all objects
  • Clear Parent (Keep Transform)
  • Insert available keyframes
  • Save and reload
Note this file has a cyclic dependency, loading the file doesn't calculate booleans because of this. (unrelated problem to actual report) To fix: - Select all objects - Clear Parent (Keep Transform) - Insert available keyframes - Save and reload
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52291
No description provided.